--- a/output.css
+++ b/output.css
@@ -1,5 +1,9 @@
-.container {
-  color: blue;
+.header-nav-list li {
+  display: inline;
+}
+
+.header-nav-list-container {
+  text-decoration-line: none;
 }
 
 /*# sourceMappingURL=output.css.map */
