--- a/Input.sass
+++ b/Input.sass
@@ -2,19 +2,18 @@ body
     text-decoration-style: bold
     font-weight: 400
     font-family: sans-serif
-
 .header-nav-list li
     display: inline
 .header-nav-list-container
     text-decoration-line: none
     text-decoration-color: black
+    text-transform: uppercase
 .header-nav-list
     display: flex
     justify-content: space-between
 .container
     max-width: 500px
     margin: 0 auto
-
 .box-switch
     --bg: #fff
     --text: #000
