--- a/output.css
+++ b/output.css
@@ -1,4 +1,21 @@
+:root {
+  --bg: #222;
+  --text: #fff;
+  --light: #cc9dff;
+}
+
+body,
+html {
+  height: 100vh;
+}
+
 body {
+  font-family: "Exo 2", sans-serif;
+  background: var(--bg);
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
+  transition: 0.5s background ease;
   text-decoration-style: bold;
   font-weight: 400;
   font-family: sans-serif;
@@ -6,6 +23,7 @@ body {
 
 .header-nav-list li {
   display: inline;
+  margin-right: 10px;
 }
 
 .header-nav-list-container {
@@ -16,11 +34,11 @@ body {
 
 .header-nav-list {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .container {
-  max-width: 500px;
+  max-width: 1000px;
   margin: 0 auto;
 }
 
@@ -44,6 +62,24 @@ body {
   top: 5px;
   left: 5px;
   transition: 0.5s all ease;
+}
+
+.light {
+  --bg: #cc9dff;
+  --text: #222;
+  background: var(--bg);
+}
+.light .box-switch {
+  background: var(--text);
+}
+.light .box-switch .switch {
+  transform: translateX(60px);
+}
+.light .navigation > li > a {
+  color: var(--text);
+}
+.light .navigation > li > a:hover {
+  color: #220244;
 }
 
 /*# sourceMappingURL=output.css.map */
